[Fix] Small icons color inconsistency in dark mode

--- a/client/src/assets/scss/dark-mode.scss
+++ b/client/src/assets/scss/dark-mode.scss
@@ -39,7 +39,7 @@ $dark-comment-internal: #3299ff;
   .dropdown-item:hover {
     background-color: $dark-hover;
   }
-  .fa-attachment, .swal2-cancel, .swal2-title, .btn-link, small, .dropdown svg {
+  .fa-attachment, .swal2-cancel, .swal2-title, .btn-link, small, .dropdown .mod-tools svg {
     color: $dark-font-color !important;
   }
   .swal2-warning {
